// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render BookForm correctly with data 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-row"
    >
      <div
        className="col form-group"
      >
        <label>
          Título
        </label>
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="Titulo"
          type="text"
          value="Livro 1"
        />
      </div>
      <div
        className="col form-group"
      >
        <label>
          Autor
        </label>
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="Autor"
          type="text"
          value="Autor 1"
        />
      </div>
    </div>
    <div
      className="form-row"
    >
      <div
        className="col form-group"
      >
        <label
          htmlFor="generoSelect"
        >
          Gênero
        </label>
        <select
          className="form-control"
          id="generoSelect"
          onChange={[Function]}
          value="EPOPEIA"
        >
          <option
            disabled={true}
            selected={true}
            value=""
          >
             -- selecione uma opção -- 
          </option>
          <option
            value="epopeia"
          >
            EPOPEIA
          </option>
          <option
            value="novela"
          >
            NOVELA
          </option>
          <option
            value="conto"
          >
            CONTO
          </option>
          <option
            value="ensaio"
          >
            ENSAIO
          </option>
          <option
            value="romance"
          >
            ROMANCE
          </option>
        </select>
      </div>
      <div
        className="col form-group"
      >
        <label>
          Data de Publicação
        </label>
        <input
          className="form-control"
          defaultValue="31/12/18"
          onChange={[Function]}
          type="date"
        />
      </div>
    </div>
    <button
      className="btn btn-success btn-lg btn-block"
    >
      Adicionar Livro
    </button>
  </form>
</div>
`;

exports[`should render BookForm correctly without data 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-row"
    >
      <div
        className="col form-group"
      >
        <label>
          Título
        </label>
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="Titulo"
          type="text"
          value=""
        />
      </div>
      <div
        className="col form-group"
      >
        <label>
          Autor
        </label>
        <input
          className="form-control"
          onChange={[Function]}
          placeholder="Autor"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="form-row"
    >
      <div
        className="col form-group"
      >
        <label
          htmlFor="generoSelect"
        >
          Gênero
        </label>
        <select
          className="form-control"
          id="generoSelect"
          onChange={[Function]}
          value=""
        >
          <option
            disabled={true}
            selected={true}
            value=""
          >
             -- selecione uma opção -- 
          </option>
          <option
            value="epopeia"
          >
            EPOPEIA
          </option>
          <option
            value="novela"
          >
            NOVELA
          </option>
          <option
            value="conto"
          >
            CONTO
          </option>
          <option
            value="ensaio"
          >
            ENSAIO
          </option>
          <option
            value="romance"
          >
            ROMANCE
          </option>
        </select>
      </div>
      <div
        className="col form-group"
      >
        <label>
          Data de Publicação
        </label>
        <input
          className="form-control"
          defaultValue="31/12/18"
          onChange={[Function]}
          type="date"
          value=""
        />
      </div>
    </div>
    <button
      className="btn btn-success btn-lg btn-block"
    >
      Adicionar Livro
    </button>
  </form>
</div>
`;
